# geo

./: CMakeLists.txt  README.md  main.cc
assets/: fragment.frag  vertex.vert
include/: avl.h  bst.h  convex.h  glad.h  gmath.h  heap.h  program.h  rbtree.h  shader.h  shape.h  style.h  vector.h  window.h
src/: avl.cpp  bst.cpp  convex.cpp  glad.c  gmath.cpp  heap.cpp  program.cpp  rbtree.cpp  shader.cpp  shape.cpp  style.cpp  tree.cpp  window.cpp
